[package]
name = "v_module"
version = "0.1.4"
authors = ["itiu <ValeriyBushenev@gmail.com>"]
edition = "2018"

[lib]
path = "src/lib.rs"

[dependencies]
log = "0.4"
chrono = "0.4"
env_logger = "0.6"
nng = "0.5.1"
rust-ini = "0.16"
crc32fast = "1.2.0"
scan_fmt = "0.1.3"
uuid = { version = "0.8", features = ["serde", "v4"] }

v_queue = "0.1"

v_api = { git = "https://github.com/semantic-machines/v-common-api.git", branch = "main", version = "0.1.1" }
v_onto = { git = "https://github.com/semantic-machines/v-common-onto.git" }
v_search = { git = "https://github.com/semantic-machines/v-common-search.git" }
v_storage = { git = "https://github.com/semantic-machines/v-common-storage.git", version = "0.1.1" }
