[package]
name = "v-common-module"
version = "0.1.7"
authors = ["itiu <ValeriyBushenev@gmail.com>"]
edition = "2018"
description = "common part of the veda platform"
license     = "MIT"

[lib]
path = "src/lib.rs"

[dependencies]
log = "0.4"
chrono = "0.4"
env_logger = "0.6"
nng = "0.5.1"
rust-ini = "0.16"
crc32fast = "1.2.0"
scan_fmt = "0.1.3"
uuid = { version = "0.8", features = ["serde", "v4"] }

v_queue = "0.1"
v_onto = { package = "v-common-onto", version = "0.1.1" }
v_api = { package = "v-common-api", version = "0.1.2" }
v_storage = { package = "v-common-storage", version = "0.1.2" }
v_search = { package = "v-common-search", version = "0.1.2" }

